--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,7 @@
 name: Deploy project
 on: [push, workflow_dispatch]
 jobs: 
-    test:
+    lint:
         runs-on: ubuntu-latest
         steps:
             - name: Get code
@@ -14,6 +14,18 @@ jobs:
               run: npm ci
             - name: Run lint
               run: npm run lint
+    test:
+        needs: lint
+        runs-on: ubuntu-latest
+        steps:
+            - name: Get code
+              uses: actions/checkout@v3
+            - name: Install NodeJS
+              uses: actions/setup-node@v3
+              with:
+                node-version: 18
+            - name: Install dependencies
+              run: npm ci
             - name: Run tests
               run: npm test
     deploy:
